[FIX] Unified Admin Backend: fixed top nav-bar vertical alignment regression

--- a/themes/base_files/scss/feature/adminui.scss
+++ b/themes/base_files/scss/feature/adminui.scss
@@ -349,10 +349,6 @@ $color-light:    rgba(0, 0, 0, 0.5);
         margin-left: 283px;
     }
 
-    .tiki-admin .admin-content nav.admin-navbar {
-        margin-top: -.35rem;
-    }
-
     .tiki-admin .filter-menu .nav-item.dropdown {
         padding-top: .4rem !important;
     }
